--- a/views/layout.html
+++ b/views/layout.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>{{title}}</title>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/moment.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css" />
   </head>
   <body>
 
@@ -11,7 +16,5 @@
 
   {% block content %}{% endblock %}
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
