--- a/views/homepage.html
+++ b/views/homepage.html
@@ -9,12 +9,14 @@
           <a class="btn btn-default btn-lg" href="/register" role="button">Create account</a>
           or
           <a class="btn btn-primary btn-lg" href="/login" role="button">ENTER</a>
+
         </p>
+        <a class="" href="/create" role="link">Create new task</a>
       </div>
     </div>
 <!-- End -->
 {% endblock %}
 
-{% block content %}
+{% block aloha %}
 <h1>aloha</h1>
 {% endblock %}
