--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-  {% block aloha %}{% endblock %}
+  <!-- {% block aloha %}{% endblock %} -->
 
   {% block content %}{% endblock %}
 
