--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,6 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
 <!-- Start -->
+{{onLine}},
+{% if onLine %}
+    Hello {{email}} <br>
+    <a href="/user/logout">Logout</a>
+{% endif %}
     <div class="container">
       <div class="jumbotron">
         <h1>Hello, User!</h1>
