--- a/views/login-page.html
+++ b/views/login-page.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
   <h3>Authentication</h3>
-  <form>
+  <form action="/user/authenticated" method="post">
     <div class="input-group">
       <span class="input-group-addon" id="basic-addon1">@</span>
       <input id="email" type="text" class="form-control" name="email" placeholder="email">
@@ -13,10 +13,16 @@
       <input id="password" type="password" class="form-control" name="password" placeholder="Password">
     </div>
     <br>
+    {% if error %}
+    <div class="alert alert-danger">
+      <strong>Error: </strong>{{error}}
+    </div>
+    {% endif %}
+    <br>
     <div class="input-group">
       <input type="submit" class="btn btn-info" value="Log In">
     </div>
-    </div>
+
   </form>
 </div>
 {% endblock %}
