--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,31 @@
     <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css" />
   </head>
   <body>
+    <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">To Do</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+      <li><a href="/tasks">All tasks</a></li>
+      {% if onLine %}
+      <li><a href="/create">New task</a></li>
+      {% endif %}
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      {% if onLine %}
+          <li><a>Welcome <b>{{fullname}}</b></a></li>
+          <li><a href="/user/logout"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
+      {% endif %}
+      {% if !onLine %}
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+      <li><a>or</a></li>
+      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+      {% endif %}
+    </ul>
+  </div>
+</nav>
 
   <!-- {% block aloha %}{% endblock %} -->
 
