--- a/views/register-page.html
+++ b/views/register-page.html
@@ -1,39 +1,45 @@
 {% extends 'layout.html' %}
 {% block content %}
+
 <div class="container">
-  <h3>Registration</h3>
-  <form action="/user/create" method="post">
-      <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon glyphicon-user"></i></span>
-        <input id="fullname" type="text" class="form-control" name="fullname" placeholder="Fullname">
+{% if !onLine %}
+  <div style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+        <div class="panel-title">Create new account</div>
       </div>
-    <br>
-      <div class="input-group">
-        <span class="input-group-addon" id="basic-addon1">@</span>
-        <input id="email" type="text" class="form-control" name="email" placeholder="email">
+      <div style="padding-top:30px" class="panel-body" >
+      {% if error %}
+        <div class="alert alert-danger col-sm-12"><strong>Error: </strong>{{error}}</div>
+      {% endif %}
+        <form action="/user/create" method="post" class="form-horizontal" role="form">
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="login-username" type="text" class="form-control" name="fullname" value="" placeholder="Fullname">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon" id="basic-addon1">@</span>
+            <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="login-password" type="password" class="form-control" name="password" placeholder="Password">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="login-password" type="password" class="form-control" name="cpassword" placeholder="Confirm password">
+          </div>
+          <div style="margin-top:10px" class="input-group">
+            <input type="submit" class="btn btn-info" value="Register">
+          </div>
+        </form>
       </div>
-    <br>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon glyphicon-lock"></i></span>
-        <input id="password" type="password" class="form-control" name="password" placeholder="Password">
-      </div>
-    <br>
-      <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon glyphicon-lock"></i></span>
-        <input id="repeat_password" type="password" class="form-control" name="cpassword" placeholder="Repeat password">
-      </div>
-    <br>
-    {% if error %}
-    <div class="alert alert-danger">
-      <strong>Error: </strong>{{error}}
     </div>
-    {% endif %}
-    <br>
-    <div class="input-group">
-      <input type="submit" class="btn btn-info" value="Registration">
-    </div>
-  </form>
-  <br>
+  </div>
+{% else %}
+  <div class="alert alert-danger col-sm-12">You're logged in as: <strong>{{fullname}}</strong> </div>
+{% endif %}
+
 
 </div>
 {% endblock %}
